Done with bad view

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:layout_marginBottom="1dp"
         android:hint="USER"
         android:inputType="text"
+        android:text="octocat"
         app:layout_constraintBottom_toTopOf="@+id/repo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,6 +32,7 @@
         android:layout_marginBottom="18dp"
         android:hint="REPO"
         android:inputType="text"
+        android:text="hello-world"
         app:layout_constraintBottom_toTopOf="@+id/call_github"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
