--- a/app/src/main/res/layout/commit.xml
+++ b/app/src/main/res/layout/commit.xml
@@ -3,36 +3,45 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="15dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    card_view:contentPadding="5dp"
+
+    app:cardCornerRadius="4dp">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-android:orientation="vertical">
-        <TextView
-            android:id="@+id/user_field"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView 1" />
-
-        <TextView
-            android:id="@+id/email_field"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView    2" />
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/hash_field"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView           3" />
+            android:text="HASH" />
 
         <ImageView
             android:id="@+id/avatar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:srcCompat="@tools:sample/avatars" />
+
+        <TextView
+            android:id="@+id/user_field"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="LOGIN" />
+
+        <TextView
+            android:id="@+id/email_field"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="EMAIL" />
+
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 
