--- a/app/src/main/res/layout/activity_articles_list.xml
+++ b/app/src/main/res/layout/activity_articles_list.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CommitsList">
+    tools:context=".FeedList">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/commitsRV"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#5900BCD4" />
+        android:background="#F08080" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
