--- a/app/src/main/res/layout/aricle.xml
+++ b/app/src/main/res/layout/aricle.xml
@@ -19,28 +19,31 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/hash_field"
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="HASH" />
+            android:textStyle="bold"
+            android:text="TITLE" />
 
         <ImageView
-            android:id="@+id/avatar"
+            android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/user_field"
+            android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="LOGIN" />
+            android:text="DESCRIPTION" />
 
         <TextView
-            android:id="@+id/email_field"
+            android:id="@+id/pub_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="EMAIL" />
+            android:textStyle="italic"
+            android:textSize="5pt"
+            android:text="PUB_DATE" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
